{{$NEXT}}

0.50     2016-04-25

- Always make the Test::TidyAll plugin verbose. There's no downside to seeing
  diffs on tidy failures.


0.49     2016-04-24

- When adding Perl::Critic and Perl::Tidy to development prereqs, ask for the
  latest versions.


0.48     2016-04-24

- Only include the DONATIONS pod section for distros where I am the copyright
  holder.


0.47     2016-04-11

- Revert changes in 0.46 that required a recent Perl. This makes testing on
  Travis painful and makes it harder for others to contribute to any module of
  mine which uses this bundle.


0.46     2016-04-11

- Switched from [ExtraTests] to [RunExtraTests].

- Made the TidyAll plugin in this bundle rewrite existing tidyall.ini files to
  make sure we don't try to check or tidy generated xt tests.


0.45     2016-03-20

- Make sure generated Pod does not have trailing whitespace.

- Fix links to mailing lists to be "mailto:" links.


0.44     2016-03-20

- Make sure that all the Pod::Weaver-related modules that this distribution
  uses are added to the prereqs list.


0.43     2016-03-20

- Added [CheckChangesHasContent].

- Added [Test::CLeanNamespaces].

- If the distro has XS code [PPPort] is added and the generated ppport.h is
  copied from the build into the repo.

- This bundle now generates a CONTRIBUTING.md file automatically.

- Added a new Pod::Weaver author bundle that replaces the one-time generation
  of a weaver.ini file.

- Fixed README.md generation to happen after pod weaving, instead of before.


0.42     2016-02-01

- Disabled the Subroutines::ProhibitExplicitReturnUndef policy in the
  generated perlcriticrc file.


0.41     2016-01-29

- Added the Test::CPAN::Meta::JSON plugin.


0.40 2015-11-24

- Added a new plugin, DROLSKY::Git::CheckFor::CorrectBranch. This plugin only
  checks that the branch is correct on non-TRIAL releases.


0.39     2015-11-24

- Added a use_github_homepage config option.


0.38     2015-09-28
