@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Make sure we set argv for all PerlCritic & PerlTidy sections when munging
+  tidyall.ini.
+
+
 0.50     2016-04-25
 
 - Always make the Test::TidyAll plugin verbose. There's no downside to seeing
